force-app/main/default/objects/ConnectInvoicingAndCash__c/ConnectInvoicingAndCash__c.object-meta.xml
<CustomObject>
    <description>Joint function to connect Invoicing to Cash</description>
    <label>F/TMS請求・仕入+現金入出</label>
    <nameField>
        <displayFormat>IC-{000000}</displayFormat>
        <label>FMS BILL+CASH ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>