force-app/main/default/objects/ConnectInvoicingAndCash__c/fields/ActualAmountCashCollected__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountCashCollected__c</fullName>
    <formula>Cashbook__r.ActualAmountCollected__c</formula>
    <label>ACTUAL AMOUNT CASH COLLECTED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>