force-app/main/default/objects/ConnectInvoicingAndCash__c/fields/ActualAmountCashCollectedUSD__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountCashCollectedUSD__c</fullName>
    <formula>Cashbook__r.ActualAmountCollectedUSD__c</formula>
    <label>ACTUAL AMOUNT CASH COLLECTED-USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>