force-app/main/default/objects/ConnectInvoicingAndCash__c/fields/ActualAmountCashPaid__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountCashPaid__c</fullName>
    <formula>Cashbook__r.ACTUAL_PAID_TO_VENDOR__c</formula>
    <label>ACTUAL AMOUNT CASH PAID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>