force-app/main/default/objects/ConnectInvoicingAndCash__c/fields/ActualAmountCashPaidUSD__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountCashPaidUSD__c</fullName>
    <formula>Cashbook__r.ActualAmountPaidUSD__c</formula>
    <label>ACTUAL AMOUNT CASH PAID-USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>