force-app/main/default/objects/ConnectInvoicingAndCash__c/fields/Cashbook__c.field-meta.xml
<CustomField>
    <fullName>Cashbook__c</fullName>
    <label>CASH BOOK</label>
    <referenceTo>CASH_BOOK__c</referenceTo>
    <relationshipName>CONNECT_INVOICING_AND_CASH</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>