force-app/main/default/objects/ConnectInvoicingAndCash__c/fields/CashType__c.field-meta.xml
<CustomField>
    <fullName>CashType__c</fullName>
    <formula>Cashbook__r.RecordType.DeveloperName</formula>
    <label>CASH TYPE</label>
    <type>Text</type>
</CustomField>