force-app/main/default/objects/ConnectInvoicingAndCash__c/fields/HBLNumber__c.field-meta.xml
<CustomField>
    <fullName>HBLNumber__c</fullName>
    <formula>Invoicing__r.Anken__r.HBL_Number_SEA_AIR__c</formula>
    <label>H B/L NUMBER</label>
    <type>Text</type>
</CustomField>