force-app/main/default/objects/ConnectInvoicingAndCash__c/fields/Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Invoicing__c</fullName>
    <label>INVOICING</label>
    <referenceTo>AnkenMeisai__c</referenceTo>
    <relationshipName>CONNECT_INVOICING_AND_CASH</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>