force-app/main/default/objects/ConnectInvoicingAndCash__c/fields/TotalCashInUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalCashInUSD__c</fullName>
    <formula>Invoicing__r.SellInTaxAmount_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT SELLING INCLUDING TAX(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>