force-app/main/default/objects/ConnectInvoicingAndCash__c/fields/UnpaidBuyingAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBuyingAmountLocal__c</fullName>
    <formula>Invoicing__r.BuyDifferentiation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BUYING INCLUDING TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>