force-app/main/default/objects/ConnectInvoicingAndCash__c/fields/UnpaidBuyingAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBuyingAmountUSD__c</fullName>
    <formula>Invoicing__r.UNPAID_BALANCE_OF_BUYING_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BUYING INCLUDING TAX(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>