force-app/main/default/objects/ConnectInvoicingAndCash__c/fields/UnreceiveSellingAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>UnreceiveSellingAmountLocal__c</fullName>
    <formula>Invoicing__r.SellDifferentiation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNRECEIVE SELLING INCLUDING TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>