force-app/main/default/objects/ConnectInvoicingAndCash__c/fields/UnreceiveSellingAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>UnreceiveSellingAmountUSD__c</fullName>
    <formula>Invoicing__r.UNPAID_BALANCE_OF_SELLING_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNRECEIVE SELLING INCLUDING TAX(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>